inserindo logo e campo de busca

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -60,6 +60,14 @@
         </div><!-- /.modal -->
 
         <header>
+            <div class="row">
+                <div class="col-md-8"><img src="https://user-images.githubusercontent.com/2197005/28128758-3b0a0626-6707-11e7-9583-dac319c8b45b.png" alt=""></div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="search" placeholder="Roacutan...">
+                    </div>
+                </div>
+            </div>
         </header>
 
         <div class="panel panel-default">
