implementando front end para a pesquisa de medicamentos

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -64,7 +64,7 @@
                 <div class="col-md-8"><img src="https://user-images.githubusercontent.com/2197005/28128758-3b0a0626-6707-11e7-9583-dac319c8b45b.png" alt=""></div>
                 <div class="col-md-4">
                     <div class="form-group">
-                        <input class="form-control" type="text" id="search" placeholder="Roacutan...">
+                        <input class="form-control" type="text" id="search" placeholder="Pesquise pelo trecho do nome ou GGREM...">
                     </div>
                 </div>
             </div>
