melhorando interface e explicando como utilizar o sistema

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -71,9 +71,13 @@
         </header>
 
         <div class="panel panel-default">
-            <div class="panel-heading">Banco de medicamentos</div>
+            <div class="panel-heading">Painel administrativo do banco de medicamentos MEMED.</div>
             <div class="panel-body">
-                <p>Banco de medicamentos</p>
+                <p>Olá! Bem-vindo ao sistema gerenciador do banco de medicamentos da Memed. Abaixo está a listagem de
+                os medicamentos cadastrados no banco de dados.</p>
+                <h3>Como usar?</h3>
+                <p>Para editar um medicamento basta clicar na sua respectiva linha. Uma caixa (modal) com o formulário
+                de edição será exibida e, basta você fazer as edições necessárias e clicar em <strong>Atualizar</strong>. Pronto. Uma mensagem será exibida confirmando a operação.</p>
             </div>
 
             <!-- Table -->
